# ggplot2_py

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
ggplot2_py/: __init__.py  _plugins.py  _utils.py  aes.py  coord.py  facet.py  geom.py  guide.py  guide_colourbar.py  guide_legend.py  labels.py  layer.py  plot.py  plot_render.py  position.py  protocols.py  scale.py  stat.py  theme_defaults.py  theme_elements.py
ggplot2_py/_biobabel/: package.yaml  skill.md
ggplot2_py/_biobabel/anti_patterns/: constant_inside_aes.yaml  forgetting_parens_on_geom.yaml  geom_bar_without_aes_y.yaml  plus_between_two_plots.yaml  position_jitter_inside_geom_point.yaml  scale_color_manual_without_breaks.yaml  theme_set_global_pollution.yaml  unquoted_column_in_aes.yaml  using_xlim_to_filter.yaml
ggplot2_py/_biobabel/concepts/: aes_mapping.yaml  extension_class_hierarchy.yaml  layer_inheritance.yaml  plus_accumulation.yaml  waiver_sentinel.yaml
ggplot2_py/_biobabel/examples/: smoke.py
ggplot2_py/_biobabel/functions/: add_gg.yaml  aes.yaml  after_scale.yaml  after_stat.yaml  annotate.yaml  annotation_custom.yaml  annotation_logticks.yaml  annotation_raster.yaml  as_labeller.yaml  autolayer.yaml  autoplot.yaml  binned_scale.yaml  calc_element.yaml  check_device.yaml  complete_theme.yaml  continuous_scale.yaml  coord_cartesian.yaml  coord_equal.yaml  coord_fixed.yaml  coord_flip.yaml  coord_munch.yaml  coord_polar.yaml  coord_quickmap.yaml  coord_radial.yaml  coord_sf.yaml  coord_trans.yaml  coord_transform.yaml  cut_interval.yaml  cut_number.yaml  cut_width.yaml  discover_extensions.yaml  discrete_scale.yaml  draw_key_abline.yaml  draw_key_blank.yaml  draw_key_boxplot.yaml  draw_key_crossbar.yaml  draw_key_dotplot.yaml  draw_key_label.yaml  draw_key_linerange.yaml  draw_key_path.yaml  (+415 more)
ggplot2_py/_biobabel/idioms/: constants_outside_aes.yaml  coord_cartesian_for_zoom.yaml  data_in_layer_for_overlay.yaml  discrete_x_continuous_y.yaml  factor_for_categorical_order.yaml  ggplot_geom_facet_theme.yaml  (+2 more)
ggplot2_py/scales/: __init__.py
tests/: test_aes_expressions.py  test_coverage_annotation2.py  test_coverage_coord.py  test_coverage_coord2.py  test_coverage_coord3.py  test_coverage_extra4.py  test_coverage_facet.py  test_coverage_facet2.py  test_coverage_geom.py  test_coverage_geom2.py  test_coverage_geom3.py  test_coverage_guide.py  test_coverage_guide2.py  test_coverage_guide3.py  test_coverage_guide4.py  test_coverage_layer.py  test_coverage_layer2.py  test_coverage_layout.py  test_coverage_layout2.py  test_coverage_limits2.py  test_coverage_misc.py  test_coverage_misc3.py  test_coverage_misc4.py  test_coverage_plot.py  test_coverage_plot2.py  test_coverage_plot3.py  test_coverage_plot4.py  test_coverage_position.py  test_coverage_position2.py  test_coverage_qplot.py  test_coverage_save2.py  test_coverage_scale.py  test_coverage_scale2.py  test_coverage_scale3.py  test_coverage_scale4.py  test_coverage_scales_init.py  test_coverage_stat.py  test_coverage_stat2.py  test_coverage_stat3.py  test_coverage_stat4.py  (+11 more)
tutorials/: aes_expressions.ipynb  aesthetic_specs.ipynb  build_hooks.ipynb  developer_guide.ipynb  extending_ggplot2.ipynb  geoms_gallery.ipynb  ggplot2.ipynb  labels_and_facets.ipynb  pipeline_dispatch.ipynb
(+2 files in other folders)
